--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,28 +4,40 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width'>
     <title>Privacy Policy - Kaptech Dev</title>
-    <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
+    <style> 
+        body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1.5em; line-height: 1.6; color: #333; max-width: 800px; margin: auto; }
+        h2 { color: #2c3e50; border-bottom: 2px solid #eee; padding-bottom: 10px; }
+        h3 { color: #2980b9; margin-top: 25px; }
+        ul { padding-left: 20px; }
+        li { margin-bottom: 8px; }
+    </style>
 </head>
 <body>
     <h2>Privacy Policy</h2>
-    <p>This privacy policy applies to all applications developed by <strong>Kaptech Dev</strong>. This service is provided by Kaptech Dev at no cost and is intended for use as is.</p>
+    <p>This privacy policy applies to all applications developed and published by <strong>Kaptech Dev</strong>. Our services are provided at no cost and are intended for use as is.</p>
     
-    <p><strong>Information Collection and Use</strong></p>
-    <p>For a better experience, while using our service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.</p>
+    <h3>1. Information Collection and Use</h3>
+    <p>For a better experience while using our Service, we may require you to provide us with certain personally identifiable information. Any information requested will be retained on your device and is not collected by us in any way. However, our applications integrate with third-party services that may collect information used to identify you.</p>
     
-    <p>The app does use third-party services that may collect information used to identify you. Link to privacy policy of third-party service providers used by the app:</p>
+    <h3>2. Third-Party Services</h3>
+    <p>Our apps use the following third-party services, which have their own privacy policies:</p>
     <ul>
-        <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
-        <li><a href="https://support.google.com/admob/answer/6128543?hl=id" target="_blank">AdMob</a></li>
+        <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a> (Core functionality)</li>
+        <li><a href="https://support.google.com/admob/answer/6128543?hl=id" target="_blank">AdMob</a> (Advertising)</li>
+        <li><a href="https://firebase.google.com/support/privacy" target="_blank">Firebase Database</a> (Secure data storage and app integrity)</li>
     </ul>
 
-    <p><strong>Cookies</strong></p>
-    <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.</p>
+    <h3>3. Security & Data Integrity</h3>
+    <p>We value your trust. For applications requiring login or data storage (such as Follower Booster), we use <strong>Firebase</strong> and <strong>Google Account Integration</strong> to ensure your passwords and sensitive data remain protected by Google's secure infrastructure. For utility apps (such as Counter Tasbih Pro), data is stored locally on your device.</p>
 
-    <p><strong>Changes to This Privacy Policy</strong></p>
-    <p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes.</p>
+    <h3>4. Contact Us</h3>
+    <p>If you have any questions or suggestions about our Privacy Policy, please contact our developer support team at:</p>
+    <ul>
+        <li><strong>ss.infowe@gmail.com</strong></li>
+        <li><strong>support-kaptech@googlegroups.com</strong></li>
+        <li><strong>support-grow@googlegroups.com</strong></li>
+    </ul>
 
-    <p><strong>Contact Us</strong></p>
-    <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at: <strong>ss.infowe@gmail.com</strong></p>
+    <p style="margin-top: 50px; font-size: 0.8em; color: #7f8c8d;">Last updated: February 2026</p>
 </body>
 </html>
